@@ -88,6 +88,11 @@ Bug Fixes
   containing non-BMP Unicode characters.  (Dawid Weiss, Robert Muir,
   Mike McCandless)
 
+Optimizations
+
+* LUCENE-4317: Improve reuse of internal TokenStreams in oal.document.Field.
+  (Uwe Schindler, Chris Male, Robert Muir)
+
 Build
 
 * LUCENE-3985: Upgrade to randomizedtesting 2.0.0. Added support for 
